Added link list

--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@
         td, th {
             border: 1px solid black;
         }
+
+        .container {
+            margin: 20px
+        }
     </style>
 </head>
 <body>
 
-
-
+<!-- link list -->
+<div>
+    <ul class="container">
+        <li>JCVD <a href="https://www.faux-texte.com/lorem-ipsum-10.htm">ICI</a></li>
+        <li>Kaga Kouko <a href="https://goldentime.fandom.com/wiki/Kouko_Kaga">ICI</a></li>
+        <li>World Cup <a href="https://terrikon.com/en/worldcup-2018">ICI</a></li>
+        <li>Table (Image Source) <a href="https://vndb.org/v25496/chars">ICI</a></li>
+    </ul>
+</div>
+    
 </body>
 </html>
