Added JCVD paragraphs and a Kouko image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             border: 1px solid black;
         }
 
+        html {
+            scroll-behavior: smooth;
+        }
+
         .container {
             margin: 20px
         }
@@ -30,6 +34,65 @@
         <li>Table (Image Source) <a href="https://vndb.org/v25496/chars">ICI</a></li>
     </ul>
 </div>
-    
+
+<!-- JCVD -->
+<div class="container">
+    <h1>JCVD</h1>
+
+    <img src="Kouko.webp" alt="Kaga Kouko" height="350" width="350"></img>
+
+    <div>
+        <p>Proinde concepta rabie saeviore, quam desperatio incendebat et fames, amplificatis viribus ardore incohibili
+            in excidium urbium matris Seleuciae efferebantur, quam comes tuebatur Castricius tresque legiones bellicis
+            sudoribus induratae.</p>
+
+        <p>Nemo quaeso miretur, si post exsudatos labores itinerum longos congestosque adfatim commeatus fiducia vestri
+            ductante barbaricos pagos adventans velut mutato repente consilio ad placidiora deverti.</p>
+
+        <p>Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a
+            priscis maioribus nobilem, ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est
+            fides.</p>
+
+        <p>Et prima post Osdroenam quam, ut dictum est, ab hac descriptione discrevimus, Commagena, nunc Euphratensis,
+            clementer adsurgit, Hierapoli, vetere Nino et Samosata civitatibus amplis inlustris.</p>
+
+        <p>Proinde concepta rabie saeviore, quam desperatio incendebat et fames, amplificatis viribus ardore incohibili
+            in excidium urbium matris Seleuciae efferebantur, quam comes tuebatur Castricius tresque legiones bellicis
+            sudoribus induratae.</p>
+
+        <p>Ideo urbs venerabilis post superbas efferatarum gentium cervices oppressas latasque leges fundamenta
+            libertatis et retinacula sempiterna velut frugi parens et prudens et dives Caesaribus tamquam liberis suis
+            regenda patrimonii iura permisit.</p>
+
+        <p>Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a
+            priscis maioribus nobilem, ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est
+            fides.</p>
+
+        <p>Quam ob rem id primum videamus, si placet, quatenus amor in amicitia progredi debeat. Numne, si Coriolanus
+            habuit amicos, ferre contra patriam arma illi cum Coriolano debuerunt? num Vecellinum amici regnum
+            adpetentem, num Maelium debuerunt iuvare?</p>
+
+        <p>Quanta autem vis amicitiae sit, ex hoc intellegi maxime potest, quod ex infinita societate generis humani,
+            quam conciliavit ipsa natura, ita contracta res est et adducta in angustum ut omnis caritas aut inter duos
+            aut inter paucos iungeretur.</p>
+
+        <p>Hae duae provinciae bello quondam piratico catervis mixtae praedonum a Servilio pro consule missae sub iugum
+            factae sunt vectigales. et hae quidem regiones velut in prominenti terrarum lingua positae ob orbe eoo monte
+            Amano disparantur.</p>
+    </div>
+
+    <a href="#">Go top</a>
+</div>
+
+
+<script>
+    const scroller = document.querySelector(".scroll-top");
+
+    scroller.addEventListener("scroll", (event) => {
+        event.preventDefault();
+        document.documentElement.scrollTo = 0;
+    });
+
+</script>
 </body>
 </html>
