Hotfix: Forgot to add scrolltop class

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             Amano disparantur.</p>
     </div>
 
-    <a href="#">Go top</a>
+    <a class=".scroll-top" href="#">Go top</a>
+</div>
 </div>
 
 
