Added Kaga Kouko's informations

--- a/index.html
+++ b/index.html
@@ -83,6 +83,33 @@
 
     <a class=".scroll-top" href="#">Go top</a>
 </div>
+
+<!-- Kaga Kouko -->
+<div class="container">
+    <h5>Biographical Info</h5>
+    <p>Kanji: 加賀 香子
+    <p>Rōmaji: Kaga Kōko
+    <p>Alias: RoboGirl, Kouko-chan (by Linda)
+    <p>Gender: Female
+
+    <h5>Personal Info</h5>
+    <p>Age: 18-19</p>
+    <p>Hair Color: Orange</p>
+    <p>Eye Color: Hazel</p>
+    <p>Status: Active</p>
+    <p></p>Relative(s): Kouko's Father (Father), Mitsuo Yanagisawa (Former crush), Banri Tada (Boyfriend/Fiance)</p>
+    <p>Occupation: Student</p>
+    <p>Affiliation: Member at Japanese Festival Culture Research Society</p>
+
+    <h5>First Appearance</h5>
+    <p>Manga: Chapter 1</p>
+    <p>Anime: Episode 1</p>
+
+    <h5>Voiced By</h5>
+    <p>Japanese: Yui Horie</p>
+    <p>English: Christina Kelly</p>
+
+    <a class=".scroll-top" href="#">Go top</a>
 </div>
 
 
