Added Smash/Marry/Kill table

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         td, th {
             border: 1px solid black;
+            padding: 5px;
+            text-align: center;
         }
 
         html {
@@ -112,6 +114,60 @@
     <a class=".scroll-top" href="#">Go top</a>
 </div>
 
+<div class="container">
+    <h1>World Cup 2018</h1>
+
+    <img src="WorldCup.png" alt="World Cup Logo">
+
+    <ol>
+        <li>France</li>
+        <li>Croatia</li>
+        <li>Belgium</li>
+        <li>England</li>
+    </ol>
+
+    <a class=".scroll-top" href="#">Go top</a>
+</div>
+
+<div class="container">
+    <h1>Smash/Marry/Kill</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <td>Name</td>
+            <td>Image</td>
+            <td>Smash/Marry/Kill</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th>Adolf Hitler</th>
+            <td><img src="Adolf.jpg" alt="Adolf"></td>
+            <td>Smash</td>
+        </tr>
+        <tr>
+            <th>Heinrich Himmler</th>
+            <td><img src="Heinrich.jpg" alt="Heinrich"></td>
+            <td>Kill</td>
+        </tr>
+        <tr>
+            <th>Joseph Goebbels</th>
+            <td><img src="Joseph.jpg" alt="Joseph"></td>
+            <td>Marry</td>
+        </tr>
+        </tbody>
+        <tfoot>
+        <tr>
+            <td>Can not</td>
+            <td>wait for</td>
+            <td>the game</td>
+        </tr>
+        </tfoot>
+    </table>
+
+    <a class=".scroll-top" href="#">Go top</a>
+</div>
 
 <script>
     const scroller = document.querySelector(".scroll-top");
