Fixes: Validator.w3c fixes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="container">
     <h1>JCVD</h1>
 
-    <img src="Kouko.webp" alt="Kaga Kouko" height="350" width="350"></img>
+    <img src="Kouko.webp" alt="Kaga Kouko" height="350" width="350">
 
     <div>
         <p>Proinde concepta rabie saeviore, quam desperatio incendebat et fames, amplificatis viribus ardore incohibili
@@ -99,7 +99,7 @@
     <p>Hair Color: Orange</p>
     <p>Eye Color: Hazel</p>
     <p>Status: Active</p>
-    <p></p>Relative(s): Kouko's Father (Father), Mitsuo Yanagisawa (Former crush), Banri Tada (Boyfriend/Fiance)</p>
+    <p>Relative(s): Kouko's Father (Father), Mitsuo Yanagisawa (Former crush), Banri Tada (Boyfriend/Fiance)</p>
     <p>Occupation: Student</p>
     <p>Affiliation: Member at Japanese Festival Culture Research Society</p>
 
