Fixed removed all the <p> spam

--- a/index.html
+++ b/index.html
@@ -43,45 +43,19 @@
 
     <img src="Kouko.webp" alt="Kaga Kouko" height="350" width="350">
 
-    <div>
-        <p>Proinde concepta rabie saeviore, quam desperatio incendebat et fames, amplificatis viribus ardore incohibili
-            in excidium urbium matris Seleuciae efferebantur, quam comes tuebatur Castricius tresque legiones bellicis
-            sudoribus induratae.</p>
+    <p>
+        Proinde concepta rabie saeviore, quam desperatio incendebat et fames, amplificatis viribus ardore incohibili in excidium urbium matris Seleuciae efferebantur, quam comes tuebatur Castricius tresque legiones bellicis sudoribus induratae.<br><br>
+        Nemo quaeso miretur, si post exsudatos labores itinerum longos congestosque adfatim commeatus fiducia vestri ductante barbaricos pagos adventans velut mutato repente consilio ad placidiora deverti.<br><br>
+        Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a priscis maioribus nobilem, ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est fides.<br><br>
+        Et prima post Osdroenam quam, ut dictum est, ab hac descriptione discrevimus, Commagena, nunc Euphratensis, clementer adsurgit, Hierapoli, vetere Nino et Samosata civitatibus amplis inlustris.<br><br>
+        Proinde concepta rabie saeviore, quam desperatio incendebat et fames, amplificatis viribus ardore incohibili in excidium urbium matris Seleuciae efferebantur, quam comes tuebatur Castricius tresque legiones bellicis sudoribus induratae.<br><br>
+        Ideo urbs venerabilis post superbas efferatarum gentium cervices oppressas latasque leges fundamenta libertatis et retinacula sempiterna velut frugi parens et prudens et dives Caesaribus tamquam liberis suis regenda patrimonii iura permisit.<br><br>
+        Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a priscis maioribus nobilem, ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est fides.<br><br>
+        Quam ob rem id primum videamus, si placet, quatenus amor in amicitia progredi debeat. Numne, si Coriolanus habuit amicos, ferre contra patriam arma illi cum Coriolano debuerunt? num Vecellinum amici regnum adpetentem, num Maelium debuerunt iuvare?<br><br>
+        Quanta autem vis amicitiae sit, ex hoc intellegi maxime potest, quod ex infinita societate generis humani, quam conciliavit ipsa natura, ita contracta res est et adducta in angustum ut omnis caritas aut inter duos aut inter paucos iungeretur.<br><br>
+        Hae duae provinciae bello quondam piratico catervis mixtae praedonum a Servilio pro consule missae sub iugum factae sunt vectigales. et hae quidem regiones velut in prominenti terrarum lingua positae ob orbe eoo monte Amano disparantur.
+    </p>
 
-        <p>Nemo quaeso miretur, si post exsudatos labores itinerum longos congestosque adfatim commeatus fiducia vestri
-            ductante barbaricos pagos adventans velut mutato repente consilio ad placidiora deverti.</p>
-
-        <p>Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a
-            priscis maioribus nobilem, ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est
-            fides.</p>
-
-        <p>Et prima post Osdroenam quam, ut dictum est, ab hac descriptione discrevimus, Commagena, nunc Euphratensis,
-            clementer adsurgit, Hierapoli, vetere Nino et Samosata civitatibus amplis inlustris.</p>
-
-        <p>Proinde concepta rabie saeviore, quam desperatio incendebat et fames, amplificatis viribus ardore incohibili
-            in excidium urbium matris Seleuciae efferebantur, quam comes tuebatur Castricius tresque legiones bellicis
-            sudoribus induratae.</p>
-
-        <p>Ideo urbs venerabilis post superbas efferatarum gentium cervices oppressas latasque leges fundamenta
-            libertatis et retinacula sempiterna velut frugi parens et prudens et dives Caesaribus tamquam liberis suis
-            regenda patrimonii iura permisit.</p>
-
-        <p>Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a
-            priscis maioribus nobilem, ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est
-            fides.</p>
-
-        <p>Quam ob rem id primum videamus, si placet, quatenus amor in amicitia progredi debeat. Numne, si Coriolanus
-            habuit amicos, ferre contra patriam arma illi cum Coriolano debuerunt? num Vecellinum amici regnum
-            adpetentem, num Maelium debuerunt iuvare?</p>
-
-        <p>Quanta autem vis amicitiae sit, ex hoc intellegi maxime potest, quod ex infinita societate generis humani,
-            quam conciliavit ipsa natura, ita contracta res est et adducta in angustum ut omnis caritas aut inter duos
-            aut inter paucos iungeretur.</p>
-
-        <p>Hae duae provinciae bello quondam piratico catervis mixtae praedonum a Servilio pro consule missae sub iugum
-            factae sunt vectigales. et hae quidem regiones velut in prominenti terrarum lingua positae ob orbe eoo monte
-            Amano disparantur.</p>
-    </div>
 
     <a class=".scroll-top" href="#">Go top</a>
 </div>
@@ -89,27 +63,30 @@
 <!-- Kaga Kouko -->
 <div class="container">
     <h5>Biographical Info</h5>
-    <p>Kanji: 加賀 香子
-    <p>Rōmaji: Kaga Kōko
-    <p>Alias: RoboGirl, Kouko-chan (by Linda)
-    <p>Gender: Female
+    <p>
+        Kanji: 加賀 香子<br>
+        Rōmaji: Kaga Kōko<br>
+        Alias: RoboGirl, Kouko-chan (by Linda)<br>
+        Gender: Female
+    </p>
 
     <h5>Personal Info</h5>
-    <p>Age: 18-19</p>
-    <p>Hair Color: Orange</p>
-    <p>Eye Color: Hazel</p>
-    <p>Status: Active</p>
-    <p>Relative(s): Kouko's Father (Father), Mitsuo Yanagisawa (Former crush), Banri Tada (Boyfriend/Fiance)</p>
-    <p>Occupation: Student</p>
-    <p>Affiliation: Member at Japanese Festival Culture Research Society</p>
+    Age: 18-19<br>
+    Hair Color: Orange<br>
+    Eye Color: Hazel<br>
+    Status: Active<br>
+    Relative(s): Kouko's Father (Father), Mitsuo Yanagisawa (Former crush), Banri Tada (Boyfriend/Fiance)<br>
+    Occupation: Student<br>
+    Affiliation: Member at Japanese Festival Culture Research Society<br>
 
     <h5>First Appearance</h5>
-    <p>Manga: Chapter 1</p>
-    <p>Anime: Episode 1</p>
+    Manga: Chapter 1<br>
+    Anime: Episode 1<br>
 
     <h5>Voiced By</h5>
-    <p>Japanese: Yui Horie</p>
-    <p>English: Christina Kelly</p>
+    Japanese: Yui Horie<br>
+    English: Christina Kelly<br>
+
 
     <a class=".scroll-top" href="#">Go top</a>
 </div>
