Initialization Flex & Grid

--- a/Exercise 2 CSS/index.html
+++ b/Exercise 2 CSS/index.html
@@ -8,7 +8,7 @@
 <body>
 <main class="corps">
     <header>
-        <a href="../../index.html">Accueil</a>
+        <a href="../index.html">Accueil</a>
         <h1>Intro CSS : Accueil</h1>
         <nav>
             <ul>
@@ -16,6 +16,8 @@
                 <li><a href="./public/positioning.html">Positioning</a></li>
                 <li><a href="./public/borders.html">Borders</a></li>
                 <li><a href="./public/background.html">Background</a></li>
+                <li><a href="./public/flex.html">Flex</a></li>
+                <li><a href="./public/grid.html">Grid</a></li>
             </ul>
         </nav>
     </header>
