--- a/Exercise 2 CSS/public/flex.html
+++ b/Exercise 2 CSS/public/flex.html
@@ -6,7 +6,45 @@
     <title>Flex</title>
     <link href="../assets/styles/flex.css" type="text/css" rel="stylesheet">
 </head>
-<body>
+<body class="container">
+
+<header>
+    <h1> Header </h1>
+</header>
+
+<nav>
+    <div>Nav</div>
+    <span>pill 1</span>
+    <span>pill 2</span>
+    <span>pill 3</span>
+    <span>pill 4</span>
+    <span>pill 5</span>
+</nav>
+
+<aside id="Aside1" aria-label="Aside1">
+    Aside 1
+</aside>
+
+<div id="article">
+    <article id="article1">
+        article1
+    </article>
+    <article id="article2">
+        article2
+    </article>
+    <article id="article3">
+        article3
+    </article>
+</div>
+
+<aside id="Aside2" aria-label="Aside2">
+    Aside 2
+</aside>
+
+<footer>
+    Footer
+</footer>
+
 
 </body>
 </html>
