--- a/Exercise 2 CSS/public/grid.html
+++ b/Exercise 2 CSS/public/grid.html
@@ -1,12 +1,81 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Grid</title>
-    <link href="../assets/styles/grid.css" type="text/css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mondrian CSS Grid</title>
+    <link rel="stylesheet" href="../assets/styles/grid.css">
 </head>
 <body>
-
+<section id="grid">
+    <div id="white1" class="grid white">
+    </div>
+    <div id="white2" class="grid white">
+    </div>
+    <div id="white3" class="grid white">
+    </div>
+    <div id="white4" class="grid white">
+    </div>
+    <div id="white5" class="grid white">
+    </div>
+    <div id="white6" class="grid white">
+    </div>
+    <div id="white7" class="grid white">
+    </div>
+    <div id="white8" class="grid white">
+    </div>
+    <div id="white9" class="grid white">
+    </div>
+    <div id="white10" class="grid white">
+    </div>
+    <div id="white11" class="grid white">
+    </div>
+    <div id="white12" class="grid white">
+    </div>
+    <div id="white13" class="grid white">
+    </div>
+    <div id="white14" class="grid white">
+    </div>
+    <div id="white15" class="grid white">
+    </div>
+    <div id="white16" class="grid white">
+    </div>
+    <div id="blue1" class="grid blue">
+    </div>
+    <div id="blue2" class="grid blue">
+    </div>
+    <div id="blue3" class="grid blue">
+    </div>
+    <div id="blue4" class="grid blue">
+    </div>
+    <div id="red1" class="grid red">
+    </div>
+    <div id="red2" class="grid red">
+    </div>
+    <div id="red3" class="grid red">
+    </div>
+    <div id="red4" class="grid red">
+    </div>
+    <div id="red5" class="grid red">
+    </div>
+    <div id="black1" class="grid black">
+    </div>
+    <div id="black2" class="grid black">
+    </div>
+    <div id="black3" class="grid black">
+    </div>
+    <div id="black4" class="grid black">
+    </div>
+    <div id="yellow1" class="grid yellow">
+    </div>
+    <div id="yellow2" class="grid yellow">
+    </div>
+    <div id="yellow3" class="grid yellow">
+    </div>
+    <div id="yellow4" class="grid yellow">
+    </div>
+    <div id="yellow5" class="grid yellow">
+    </div>
+</section>
 </body>
 </html>
