--- a/Exercise 2 CSS/public/flex.html
+++ b/Exercise 2 CSS/public/flex.html
@@ -21,30 +21,31 @@
     <span>pill 5</span>
 </nav>
 
-<aside id="Aside1" aria-label="Aside1">
-    Aside 1
-</aside>
+<main>
+    <aside id="Aside1" aria-label="Aside1">
+        Aside 1
+    </aside>
 
-<div id="article">
-    <article id="article1">
-        article1
-    </article>
-    <article id="article2">
-        article2
-    </article>
-    <article id="article3">
-        article3
-    </article>
-</div>
+    <section id="article">
+        <article id="article1">
+            article1
+        </article>
+        <article id="article2">
+            article2
+        </article>
+        <article id="article3">
+            article3
+        </article>
+    </section>
 
-<aside id="Aside2" aria-label="Aside2">
-    Aside 2
-</aside>
+    <aside id="Aside2" aria-label="Aside2">
+        Aside 2
+    </aside>
+</main>
 
 <footer>
     Footer
 </footer>
-
 
 </body>
 </html>
