Flex: Added nav header

--- a/Exercise 2 CSS/public/flex.html
+++ b/Exercise 2 CSS/public/flex.html
@@ -9,11 +9,14 @@
 <body class="container">
 
 <header>
-    <h1> Header </h1>
+    <h1>
+        Header
+    </h1>
 </header>
 
 <nav>
-    <div>Nav</div>
+    <h3>Nav</h3>
+
     <span>pill 1</span>
     <span>pill 2</span>
     <span>pill 3</span>
