--- a/Exercise 2 CSS/index.html
+++ b/Exercise 2 CSS/index.html
@@ -2,25 +2,26 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro CSS</title>
-    <link rel="stylesheet" href="../../assets/style/default.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./../assets/styles/default.css">
 </head>
 <body>
-<main class="corps">
+<main class="container mt-5">
     <header>
-        <a href="../index.html">Accueil</a>
+        <button class="btn bg-pink-secondary fw-bold"><a class="text-body text-decoration-none" href="../index.html">Accueil</a>
+        </button>
         <h1>Intro CSS : Accueil</h1>
-        <nav>
-            <ul>
-                <li><a href="./public/poids.html">Poids</a></li>
-                <li><a href="./public/positioning.html">Positioning</a></li>
-                <li><a href="./public/borders.html">Borders</a></li>
-                <li><a href="./public/background.html">Background</a></li>
-                <li><a href="./public/flex.html">Flex</a></li>
-                <li><a href="./public/grid.html">Grid</a></li>
-            </ul>
-        </nav>
     </header>
+    <nav class="list-group text-center">
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/poids.html">Poids</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/positioning.html">Positioning</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/borders.html">Borders</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/background.html">Background</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/flex.html">Flex</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/grid.html">Grid</a>
+    </nav>
 </main>
 </body>
 </html>
