--- a/Exercise 2 CSS/public/flex.html
+++ b/Exercise 2 CSS/public/flex.html
@@ -13,7 +13,7 @@
 </header>
 
 <nav>
-    <div>Nav</div>
+    <h3>Nav</h3>
     <span>pill 1</span>
     <span>pill 2</span>
     <span>pill 3</span>
