--- a/Exercise 2 CSS/public/grid.html
+++ b/Exercise 2 CSS/public/grid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mondrian CSS Grid</title>
+    <title>Grid</title>
     <link rel="stylesheet" href="../assets/styles/grid.css">
 </head>
 <body>
