--- a/Exercise 2 CSS/index.html
+++ b/Exercise 2 CSS/index.html
@@ -21,6 +21,7 @@
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/background.html">Background</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/flex.html">Flex</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/grid.html">Grid</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/pseudo.html">Pseudo Classes</a>
     </nav>
 </main>
 </body>
