--- a/Exercise 2 CSS/index.html
+++ b/Exercise 2 CSS/index.html
@@ -22,6 +22,7 @@
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/flex.html">Flex</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/grid.html">Grid</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/pseudo.html">Pseudo Classes</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/animation.html">Animation</a>
     </nav>
 </main>
 </body>
