--- a/Exercise 2 CSS/public/animation.html
+++ b/Exercise 2 CSS/public/animation.html
@@ -9,7 +9,11 @@
   <body>
     <main class="container">
       <article>
+
+        <!-- Cube -->
         <section>
+            <h2>Carré qui torune</h2>
+            <div id="cube"></div>
         </section>
       </article>
     </main>
