--- a/Exercise 2 CSS/public/animation.html
+++ b/Exercise 2 CSS/public/animation.html
@@ -15,6 +15,14 @@
             <h2>Carré qui torune</h2>
             <div id="cube"></div>
         </section>
+
+        <!-- Bouncing -->
+        <section id="bouncing">
+            <h2>Balle qui rebondit</h2>
+            <div>
+                <div></div>
+            </div>
+        </section>
       </article>
     </main>
   </body>
