--- a/Exercise 2 CSS/public/animation.html
+++ b/Exercise 2 CSS/public/animation.html
@@ -23,6 +23,16 @@
                 <div></div>
             </div>
         </section>
+
+        <!-- Loader -->
+        <section id="loader">
+            <h2>Loader</h2>
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </section>
       </article>
     </main>
   </body>
