--- a/Exercise 2 CSS/public/animation.html
+++ b/Exercise 2 CSS/public/animation.html
@@ -8,30 +8,32 @@
   </head>
   <body>
     <main class="container">
+      <aside>
+        Drop
+      </aside>
       <article>
-
         <!-- Cube -->
         <section>
-            <h2>Carré qui torune</h2>
-            <div id="cube"></div>
+          <h2>Carré qui torune</h2>
+          <div id="cube"></div>
         </section>
 
         <!-- Bouncing -->
         <section id="bouncing">
-            <h2>Balle qui rebondit</h2>
-            <div>
-                <div></div>
-            </div>
+          <h2>Balle qui rebondit</h2>
+          <div>
+            <div></div>
+          </div>
         </section>
 
         <!-- Loader -->
         <section id="loader">
-            <h2>Loader</h2>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
+          <h2>Loader</h2>
+          <div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
         </section>
       </article>
     </main>
