--- a/Exercise 2 CSS/public/animation.html
+++ b/Exercise 2 CSS/public/animation.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <main class="container">
-      <aside>
-        Drop
-      </aside>
+      <aside>Drop</aside>
       <article>
         <!-- Cube -->
         <section>
@@ -34,6 +32,17 @@
             <div></div>
             <div></div>
           </div>
+        </section>
+
+        <!-- Queue -->
+        <section id="queue">
+          <h2>Faire la queue</h2>
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>4</div>
+          <div>5</div>
+          <div>6</div>
         </section>
       </article>
     </main>
