--- a/Exercise 2 CSS/public/responsive.html
+++ b/Exercise 2 CSS/public/responsive.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Animation</title>
+    <title>Responsive</title>
     <link href="../assets/styles/responsive.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    
+
   </body>
 </html>
