--- a/Exercise 2 CSS/public/responsive.html
+++ b/Exercise 2 CSS/public/responsive.html
@@ -7,6 +7,34 @@
     <link href="../assets/styles/responsive.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-
+    <header>
+      <h1>Responsive</h1>
+      <nav>
+        <button>Hamburger</button>
+        <div><a>Link 1</a></span>
+        <div><a>Link 2</a></span>
+        <div><a>Link 3</a></span>
+        <div><a>Link 4</a></span>
+        <div><a>Link 5</a></span>
+      </nav>
+    </header>
+    <section>Content</section>
+    <aside>Aside 1</aside>
+    <aside>Aside 2</aside>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
   </body>
 </html>
