--- a/Exercise 2 CSS/public/responsive.html
+++ b/Exercise 2 CSS/public/responsive.html
@@ -11,30 +11,35 @@
       <h1>Responsive</h1>
       <nav>
         <button>Hamburger</button>
-        <div><a>Link 1</a></span>
-        <div><a>Link 2</a></span>
-        <div><a>Link 3</a></span>
-        <div><a>Link 4</a></span>
-        <div><a>Link 5</a></span>
+        <a>Link 1</a>
+        <a>Link 2</a>
+        <a>Link 3</a>
+        <a>Link 4</a>
+        <a>Link 5</a>
       </nav>
     </header>
-    <section>Content</section>
+    <section>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate porro modi error blanditiis dicta suscipit minima vero nihil veniam nemo optio quia illo perspiciatis labore aspernatur
+      natus, nesciunt sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea suscipit id quam labore! Ratione doloribus commodi perspiciatis eligendi voluptates, excepturi exercitationem
+    </section>
     <aside>Aside 1</aside>
     <aside>Aside 2</aside>
-    <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-    </ul>
-    <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-    </ul>
-    <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-    </ul>
+    <footer>
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
+    </footer>
   </body>
 </html>
