--- a/Exercise 2 CSS/public/responsive.html
+++ b/Exercise 2 CSS/public/responsive.html
@@ -18,6 +18,7 @@
         <a>Link 5</a>
       </nav>
     </header>
+    <img src="../assets/images/Kouko.jpg">
     <section>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptate porro modi error blanditiis dicta suscipit minima vero nihil veniam nemo optio quia illo perspiciatis labore aspernatur
       natus, nesciunt sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea suscipit id quam labore! Ratione doloribus commodi perspiciatis eligendi voluptates, excepturi exercitationem
