That wasn't the graded responsive yet lmao

--- a/Exercise 2 CSS/public/InClass/responsive.html
+++ b/Exercise 2 CSS/public/InClass/responsive.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Responsive</title>
-    <link href="../assets/styles/responsive.css" type="text/css" rel="stylesheet" />
+    <link href="./responsive.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <header>
