--- a/Exercise 2 CSS/public/responsive/responsive1.html
+++ b/Exercise 2 CSS/public/responsive/responsive1.html
@@ -6,5 +6,45 @@
     <title>Responsive</title>
     <link href="../../assets/styles/responsive/responsive1.css" type="text/css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <!-- HEADER -->
+      <header>
+        <h1>Responsive</h1>
+        <nav>
+          <h3>Nav</h3>
+          <li>Item 1</li>
+          <li>Item 2</li>
+          <li>Item 3</li>
+          <li>Item 4</li>
+        </nav>
+      </header>
+
+      <!-- CONTENT -->
+      <article>
+        <aside>Aside 1</aside>
+        <section>
+          <p>
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+          </p>
+          <p>
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+          </p>
+          <p>
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+          </p>
+        </section>
+        <aside>Aside 2</aside>
+      </article>
+
+      <!-- FOOTER -->
+      <footer>Footer</footer>
+    </main>
+  </body>
 </html>
