--- a/Exercise 2 CSS/index.html
+++ b/Exercise 2 CSS/index.html
@@ -23,7 +23,8 @@
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/grid.html">Grid</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/pseudo.html">Pseudo Classes</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/animation.html">Animation</a>
-        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/responsive.html">Responsive</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/responsive/responsive1.html">Responsive 1</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/responsive/responsive2.html">Responsive 2</a>
     </nav>
 </main>
 </body>
