--- a/Exercise 2 CSS/public/responsive/responsive2.html
+++ b/Exercise 2 CSS/public/responsive/responsive2.html
@@ -6,5 +6,8 @@
     <title>Responsive</title>
     <link href="../../assets/styles/responsive/responsive2.css" type="text/css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <img src="../../assets/images/gideon-that-piece-of-shit-i-swear-i-do-ng-plus-just-to-kill-him-again-in-different-ways-aldin-2024.gif">
+  </body>
+  <div id="cube"></div>
 </html>
