Init MORE EXERCISES???

--- a/Exercise 2 CSS/index.html
+++ b/Exercise 2 CSS/index.html
@@ -25,6 +25,9 @@
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/animation.html">Animation</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/responsive/responsive1.html">Responsive 1</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/responsive/responsive2.html">Responsive 2</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/responsive/Web.html">Responsive Web Page</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/responsive/Weather.html">Responsive Weather</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/responsive/Grid.html">Responsive Grid</a>
     </nav>
 </main>
 </body>
