Web Page: Header & Upper

--- a/Exercise 2 CSS/public/responsive/weather.html
+++ b/Exercise 2 CSS/public/responsive/weather.html
@@ -7,6 +7,38 @@
     <link href="../../assets/styles/responsive/weather.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    
+    <main>
+      <header>
+        <h1>FRANKFURT AM MAIN</h1>
+        <p>Es ist Mittwoch meine Kerle</p>
+        <p>Casting Magic Missiles...</p>
+      </header>
+
+      <article id="upper">
+        <section>
+          <i class="fa-solid fa-cloud-showers-heavy"></i>
+          <p>60*</p>
+        </section>
+
+        <section>
+          <p>How: Very bad</p>
+          <p>How long: Very long</p>
+          <p>Bad: Yes</p>
+          <p>Good Night: Goodbye</p>
+        </section>
+      </article>
+
+      <article id="main">
+        <section>main</section>
+        <section>main</section>
+        <section>main</section>
+        <section>main</section>
+        <section>main</section>
+        <section>main</section>
+        <section>main</section>
+      </article>
+    </main>
+
+    <script src="https://kit.fontawesome.com/9a524d7cc6.js" crossorigin="anonymous"></script>
   </body>
 </html>
