--- a/Exercise 2 CSS/public/responsive/weather.html
+++ b/Exercise 2 CSS/public/responsive/weather.html
@@ -29,13 +29,75 @@
       </article>
 
       <article id="main">
-        <section>main</section>
-        <section>main</section>
-        <section>main</section>
-        <section>main</section>
-        <section>main</section>
-        <section>main</section>
-        <section>main</section>
+        <section>
+          <p class="dayPart"><strong>Today</strong></p>
+          <i class="fa-solid fa-cloud-rain dayPart"></i>
+          <div class="dayPart">
+            <p>20</p>
+            <p>25</p>
+          </div>
+          <p class="dayPart">Number 20</p>
+        </section>
+
+        <section>
+          <p class="dayPart"><strong>Tomorrow</strong></p>
+          <i class="fa-solid fa-sun dayPart"></i>
+          <div class="dayPart">
+            <p>22</p>
+            <p>28</p>
+          </div>
+          <p class="dayPart">Number 21</p>
+        </section>
+
+        <section>
+          <p class="dayPart"><strong>Saturday</strong></p>
+          <i class="fa-solid fa-cloud-sun dayPart"></i>
+          <div class="dayPart">
+            <p>18</p>
+            <p>24</p>
+          </div>
+          <p class="dayPart">Number 22</p>
+        </section>
+
+        <section>
+          <p class="dayPart"><strong>Sunday</strong></p>
+          <i class="fa-solid fa-snowflake dayPart"></i>
+          <div class="dayPart">
+            <p>15</p>
+            <p>20</p>
+          </div>
+          <p class="dayPart">Number 23</p>
+        </section>
+
+        <section>
+          <p class="dayPart"><strong>Monday</strong></p>
+          <i class="fa-solid fa-cloud dayPart"></i>
+          <div class="dayPart">
+            <p>19</p>
+            <p>23</p>
+          </div>
+          <p class="dayPart">Number 24</p>
+        </section>
+
+        <section>
+          <p class="dayPart"><strong>Tuesday</strong></p>
+          <i class="fa-solid fa-cloud-showers-heavy dayPart"></i>
+          <div class="dayPart">
+            <p>21</p>
+            <p>27</p>
+          </div>
+          <p class="dayPart">Number 25</p>
+        </section>
+
+        <section>
+          <p class="dayPart"><strong>Wednesday</strong></p>
+          <i class="fa-solid fa-smog dayPart"></i>
+          <div class="dayPart">
+            <p>16</p>
+            <p>22</p>
+          </div>
+          <p class="dayPart">Number 26</p>
+        </section>
       </article>
     </main>
 
