Grid: Init & fluid-container & row

--- a/Exercise 2 CSS/public/responsive/grid.html
+++ b/Exercise 2 CSS/public/responsive/grid.html
@@ -7,6 +7,8 @@
     <link href="../../assets/styles/responsive/grid.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
+    <main class="fluid-container">
 
+    </main>
   </body>
 </html>
