--- a/Exercise 2 CSS/public/responsive/grid.html
+++ b/Exercise 2 CSS/public/responsive/grid.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <main class="fluid-container">
-
+      <!-- HEADER -->
+      <header>
+        <img src="../../assets/images/Kouko.jpg" height="32" width="32" />
+        <div>
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </header>
     </main>
+
+    <script src="https://kit.fontawesome.com/9a524d7cc6.js" crossorigin="anonymous"></script>
   </body>
 </html>
