--- a/Exercise 2 CSS/public/responsive/grid.html
+++ b/Exercise 2 CSS/public/responsive/grid.html
@@ -15,6 +15,12 @@
           <i class="fa-solid fa-bars"></i>
         </div>
       </header>
+
+      <!-- NAV -->
+       <nav>
+        <h1>KAGA KOUKO</h1>
+        <img src="../../assets/images/Kouko.jpg" width="192" height="192" />
+       </nav>
     </main>
 
     <script src="https://kit.fontawesome.com/9a524d7cc6.js" crossorigin="anonymous"></script>
