--- a/Exercise 2 CSS/public/responsive/grid.html
+++ b/Exercise 2 CSS/public/responsive/grid.html
@@ -17,10 +17,20 @@
       </header>
 
       <!-- NAV -->
-       <nav>
+      <nav>
         <h1>KAGA KOUKO</h1>
         <img src="../../assets/images/Kouko.jpg" width="192" height="192" />
-       </nav>
+      </nav>
+
+      <!-- TITLE -->
+      <article id="title">
+        <h2>Why she is the best Waifu</h2>
+        <section>
+          Kouko Kaga (加賀 香子 Kaga Kōko) is the deuteragonist of the Golden Time series. She is a freshman law student who was formerly in love with Mitsuo Yanagisawa. She later becomes the
+          girlfriend/fiance of Banri Tada. Her birthday is on July 7th.
+        </section>
+      </article>
+
     </main>
 
     <script src="https://kit.fontawesome.com/9a524d7cc6.js" crossorigin="anonymous"></script>
