--- a/Exercise 2 CSS/public/responsive/grid.html
+++ b/Exercise 2 CSS/public/responsive/grid.html
@@ -21,6 +21,11 @@
       <nav>
         <h1>KAGA KOUKO</h1>
         <img src="../../assets/images/Kouko.jpg" width="192" height="192" />
+        <div>
+          <button>Article 1</button>
+          <button>Article 2</button>
+          <button>Article 3</button>
+        </div>
       </nav>
 
       <!-- TITLE -->
@@ -37,21 +42,21 @@
         <h2>
           Articles
         </h2>
-        <section class="col-xs-12">
+        <section class="col-xs-12 col-sm-12">
           <img src="../../assets/images/Kouko.jpg" height="96" width="96" />
           <p>
             Kouko has wavy waist-length light caramel brown hair that has little "flicks" (similar to curls) at the ends of her hair (her hair is always seen worn down which is almost never tied up, though she ties her hair up in a ponytail or bun when the situation calls for it), dark hazel eyes and large breasts. She wears a lot of stylish clothes in her daily life, almost always wearing high heels pink lip gloss/lipstick. Since Kouko comes from a very wealthy family, she can afford to dress in the latest fashion, which causes many girls at the university to be intimidated by her.
           </p>
         </section>
 
-        <section class="col-xs-12">
+        <section class="col-xs-12 col-sm-12">
           <img src="../../assets/images/Kouko.jpg" height="96" width="96" />
           <p>
             Kouko's personality is one that changes depending on who she's with. Due to being raised in a wealthy household, she has formal and strict ways of expression that make her talk and act differently compared to those around her. She interacts with strangers with formality and kindness, but her true nature comes out more around love interests like Mitsuo Yanagisawa and later Banri Tada. She is extremely devoted to the object of her affection, pursuing them single-mindedly and being clingy to the level of stalking. While she is aware that this side of her seems to bother people - including the ones she likes - she can't change herself. She also has a harder time controlling her emotions around the person she loves. For example, when she discovers that Mitsuo transferred to a new college, she buys him a bouquet of red roses to congratulate him, only to lose her cool and hit him with the bouquet when she sees him. She also can't stand seeing other girls around the person she loves, becoming hostile and rude in those scenarios.
           </p>
         </section>
 
-        <section class="col-xs-12">
+        <section class="col-xs-12 col-sm-12">
           <img src="../../assets/images/Kouko.jpg" height="96" width="96" />
           <p>
             Kouko is Mitsuo Yanagisawa's childhood friend and she has been with him for as long as she can remember. Both of them entered the same elementary school, high school, and had once taken a calligraphy class together. Despite their closeness to one another, Kouko's love for him appears to be one-sided. She ends up following Mitsuo to his current college secretly, as she knew that Mitsuo had been lying to her about enrolling in their affiliated college back when they graduated from high school. She holds back her rage for four months and finally slaps Mitsuo with the rose bouquet upon seeing him happily walking to the university with Banri Tada during the entrance ceremony. Due to her history with Mitsuo, primarily with her stalking habits and overly-obsessive love for him, Kouko is always being avoided by Mitsuo.
