--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         </div>
     </div>
 
+    <!-- Exercise 3: JS -->
+    <div class="card m-3 border-0 rounded-5 shadow">
+        <div class="card-body p-4">
+            <i class="fa-brands fa-js mb-4"></i>
+            <h4 class="card-title mb-3 text-pink-secondary">Exercise 3: JS</h4>
+            <a href="Exercise%203%20JS/index.html"
+               class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
+        </div>
+    </div>
+
 </div>
 
 </body>
