Hated prompt so much, I didn't even think of pushing

--- a/Exercise 3 JS/public/variables.html
+++ b/Exercise 3 JS/public/variables.html
@@ -6,6 +6,8 @@
     <title>Basic</title>
     <link rel="stylesheet" href="../assets/styles/basic.js" />
   </head>
-  <body></body>
-  <script src="../assets/js/basic.js"></script>
+  <body>
+
+  </body>
+  <script src="../assets/js/variables.js"></script>
 </html>
