--- a/Exercise 3 JS/index.html
+++ b/Exercise 3 JS/index.html
@@ -15,7 +15,7 @@
         <h1>Intro JS : Accueil</h1>
     </header>
     <nav class="list-group text-center">
-        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/basic.html">Basics</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/variables.html">Basics</a>
     </nav>
 </main>
 </body>
