--- a/Exercise 3 JS/public/logic.html
+++ b/Exercise 3 JS/public/logic.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Variables</title>
+    <title>Logic</title>
   </head>
-  <body>
-
-  </body>
-  <script src="../assets/js/variables.js"></script>
+  <body></body>
+  <script src="../assets/js/logic.js"></script>
 </html>
