--- a/Exercise 3 JS/index.html
+++ b/Exercise 3 JS/index.html
@@ -17,6 +17,7 @@
     <nav class="list-group text-center">
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/variables.html">Variables</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/logic.html">Logic</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/logic.html">DOM</a>
     </nav>
 </main>
 </body>
