--- a/Exercise 3 JS/public/dom.html
+++ b/Exercise 3 JS/public/dom.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM</title>
   </head>
-  <body></body>
+  <body>
+    <div id="footer" style="height: 500px"></div>
+  </body>
   <script src="../assets/js/dom.js"></script>
 </html>
