--- a/Exercise 3 JS/public/dom.html
+++ b/Exercise 3 JS/public/dom.html
@@ -6,7 +6,11 @@
     <title>DOM</title>
   </head>
   <body>
+    <!-- Exercise 1 -->
     <div id="footer" style="height: 500px"></div>
+
+    <!-- Exercise 2 -->
+     <div id="blocEx2"></div>
   </body>
   <script src="../assets/js/dom.js"></script>
 </html>
