--- a/Exercise 3 JS/public/dom.html
+++ b/Exercise 3 JS/public/dom.html
@@ -11,6 +11,9 @@
 
     <!-- Exercise 2 -->
      <div id="blocEx2"></div>
+
+     <!-- Exercise 3 -->
+     <div id="blocEx3"></div>
   </body>
   <script src="../assets/js/dom.js"></script>
 </html>
