--- a/Exercise 3 JS/public/dom.html
+++ b/Exercise 3 JS/public/dom.html
@@ -7,13 +7,18 @@
   </head>
   <body>
     <!-- Exercise 1 -->
-    <div id="footer" style="height: 500px"></div>
+    <div id="blocEx1">
+      <div id="footer" style="height: 500px"></div>
+    </div>
 
     <!-- Exercise 2 -->
-     <div id="blocEx2"></div>
+    <div id="blocEx2"></div>
 
-     <!-- Exercise 3 -->
-     <div id="blocEx3"></div>
+    <!-- Exercise 3 -->
+    <div id="blocEx3"></div>
+
+    <!-- Exercise 4 -->
+    <div id="blocEx4"></div>
   </body>
   <script src="../assets/js/dom.js"></script>
 </html>
