--- a/Exercise 3 JS/public/dom.html
+++ b/Exercise 3 JS/public/dom.html
@@ -19,6 +19,9 @@
 
     <!-- Exercise 4 -->
     <div id="blocEx4"></div>
+
+    <!-- Exercise 5 -->
+    <div id="blocEx5"></div>
   </body>
   <script src="../assets/js/dom.js"></script>
 </html>
