--- a/Exercise 3 JS/public/events.html
+++ b/Exercise 3 JS/public/events.html
@@ -6,6 +6,11 @@
     <title>Events</title>
   </head>
   <body>
+    <!-- Exercise 1 -->
+    <div id="ex1">
+      <button id="click">Click Me</button>
+      <span id="iterations"></span>
+    </div>
   </body>
   <script src="../assets/js/events.js"></script>
 </html>
