--- a/Exercise 3 JS/public/events.html
+++ b/Exercise 3 JS/public/events.html
@@ -33,6 +33,11 @@
         <span id="resAge"></span>
       </div>
     </div>
+
+    <!-- Exercise 3 -->
+    <div id="ex3">
+      <div id="cube" style="height: 50px; width: 50px; background-color: black; position: absolute; top: 200px; left: 200px;"></div>
+    </div>
   </body>
   <script src="../assets/js/events.js"></script>
 </html>
