Events: Ex4 Part 1 & 2

--- a/Exercise 3 JS/public/events.html
+++ b/Exercise 3 JS/public/events.html
@@ -36,7 +36,19 @@
 
     <!-- Exercise 3 -->
     <div id="ex3">
-      <div id="cube" style="height: 50px; width: 50px; background-color: black; position: absolute; top: 200px; left: 200px;"></div>
+      <div id="cube" style="height: 50px; width: 50px; background-color: black; position: absolute; top: 200px; left: 200px"></div>
+    </div>
+
+    <!-- Exercise 4 -->
+    <div id="ex4">
+        <form>
+            <input type="number" id="showRed"></input>
+            <input type="number" id="showGreen"></input>
+            <input type="number" id="showBlue"></input>
+            <button type="submit" id="colorButton">Random Color</button>
+            <button type="submit" id="colorButtonNotRandom">Apply Colors</button>
+        </form>
+    </div>
     </div>
   </body>
   <script src="../assets/js/events.js"></script>
