--- a/Exercise 3 JS/public/events.html
+++ b/Exercise 3 JS/public/events.html
@@ -49,6 +49,15 @@
             <button type="submit" id="colorButtonNotRandom">Apply Colors</button>
         </form>
     </div>
+
+    <!-- Exercise 5 -->
+    <div id="ex5">
+        <div id="title1">Title1</div>
+        <div id="content1" class="invisible">Content1</div>
+        <div id="title2">Title2</div>
+        <div id="content2" class="invisible">Content2</div>
+        <div id="title3">Title3</div>
+        <div id="content3" class="invisible">Content3</div>
     </div>
   </body>
   <script src="../assets/js/events.js"></script>
