--- a/Exercise 3 JS/index.html
+++ b/Exercise 3 JS/index.html
@@ -19,6 +19,7 @@
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/logic.html">Logic</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/dom.html">DOM</a>
         <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/events.html">Events</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/game.html">Game</a>
     </nav>
 </main>
 </body>
