--- a/Exercise 3 JS/public/game.html
+++ b/Exercise 3 JS/public/game.html
@@ -6,6 +6,10 @@
     <title>Game</title>
     <link href="../assets/styles/game.css" type="text/css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <main class="container">
+        
+    </main>
+  </body>
   <script src="../assets/js/game.js"></script>
 </html>
