Add: Type Container

--- a/Exercise 3 JS/public/game.html
+++ b/Exercise 3 JS/public/game.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main class="container">
-        
+      <section id="typesContainer" class="row"></section>
     </main>
   </body>
   <script src="../assets/js/game.js"></script>
